Fix small issues in tests